--- a/AppFinanzas/web/css/contact-form.css
+++ b/AppFinanzas/web/css/contact-form.css
@@ -3,7 +3,7 @@ h1 {
 	text-align: center;
 }
 
-.c-form {
+.g-form {
 	background: #58c03c;
 	margin: 0 auto;
 	padding: 30px;
@@ -14,19 +14,19 @@ h1 {
 	line-height: 1.5em;
 }
 
-.c-form h2 {
+.g-form h2 {
 	font-size: 3em;
 	line-height: 1em;
 	margin: 0 0 0.5em;
 }
 
-.c-form label {
+.g-form label {
 	display: block;
 	margin: 0 0 5px;
 	cursor: pointer;
 }
 
-.c-form select,.c-form textarea,.c-form input[type="text"],.c-form input[type="password"],.c-form input[type="datetime"],.c-form input[type="datetime-local"],.c-form input[type="date"],.c-form input[type="month"],.c-form input[type="time"],.c-form input[type="week"],.c-form input[type="number"],.c-form input[type="email"],.c-form input[type="url"],.c-form input[type="search"],.c-form input[type="tel"],.c-form input[type="color"],.c-form .uneditable-input {
+.g-form select,.g-form textarea,.g-form input[type="text"],.g-form input[type="password"],.g-form input[type="datetime"],.g-form input[type="datetime-local"],.g-form input[type="date"],.g-form input[type="month"],.g-form input[type="time"],.g-form input[type="week"],.g-form input[type="number"],.g-form input[type="email"],.g-form input[type="url"],.g-form input[type="search"],.g-form input[type="tel"],.g-form input[type="color"],.g-form .uneditable-input {
 	font-size: 14px;
 	border: 0;
 	background: #fff;
@@ -36,16 +36,16 @@ h1 {
 	width: 290px;
 }
 
-.c-form select:focus,.c-form textarea:focus,.c-form input[type="text"]:focus,.c-form input[type="password"]:focus,.c-form input[type="datetime"]:focus,.c-form input[type="datetime-local"]:focus,.c-form input[type="date"]:focus,.c-form input[type="month"]:focus,.c-form input[type="time"]:focus,.c-form input[type="week"]:focus,.c-form input[type="number"]:focus,.c-form input[type="email"]:focus,.c-form input[type="url"]:focus,.c-form input[type="search"]:focus,.c-form input[type="tel"]:focus,.c-form input[type="color"]:focus,.c-form .uneditable-input:focus {
+.g-form select:focus,.g-form textarea:focus,.g-form input[type="text"]:focus,.g-form input[type="password"]:focus,.g-form input[type="datetime"]:focus,.g-form input[type="datetime-local"]:focus,.g-form input[type="date"]:focus,.g-form input[type="month"]:focus,.g-form input[type="time"]:focus,.g-form input[type="week"]:focus,.g-form input[type="number"]:focus,.g-form input[type="email"]:focus,.g-form input[type="url"]:focus,.g-form input[type="search"]:focus,.g-form input[type="tel"]:focus,.g-form input[type="color"]:focus,.g-form .uneditable-input:focus {
 	outline: none;
 	color: #000;
 }
 
-.c-form select:-moz-placeholder,.c-form textarea:-moz-placeholder,.c-form input[type="text"]:-moz-placeholder,.c-form input[type="password"]:-moz-placeholder,.c-form input[type="datetime"]:-moz-placeholder,.c-form input[type="datetime-local"]:-moz-placeholder,.c-form input[type="date"]:-moz-placeholder,.c-form input[type="month"]:-moz-placeholder,.c-form input[type="time"]:-moz-placeholder,.c-form input[type="week"]:-moz-placeholder,.c-form input[type="number"]:-moz-placeholder,.c-form input[type="email"]:-moz-placeholder,.c-form input[type="url"]:-moz-placeholder,.c-form input[type="search"]:-moz-placeholder,.c-form input[type="tel"]:-moz-placeholder,.c-form input[type="color"]:-moz-placeholder,.c-form .uneditable-input:-moz-placeholder,.c-form select:-ms-input-placeholder,.c-form textarea:-ms-input-placeholder,.c-form input[type="text"]:-ms-input-placeholder,.c-form input[type="password"]:-ms-input-placeholder,.c-form input[type="datetime"]:-ms-input-placeholder,.c-form input[type="datetime-local"]:-ms-input-placeholder,.c-form input[type="date"]:-ms-input-placeholder,.c-form input[type="month"]:-ms-input-placeholder,.c-form input[type="time"]:-ms-input-placeholder,.c-form input[type="week"]:-ms-input-placeholder,.c-form input[type="number"]:-ms-input-placeholder,.c-form input[type="email"]:-ms-input-placeholder,.c-form input[type="url"]:-ms-input-placeholder,.c-form input[type="search"]:-ms-input-placeholder,.c-form input[type="tel"]:-ms-input-placeholder,.c-form input[type="color"]:-ms-input-placeholder,.c-form .uneditable-input:-ms-input-placeholder,.c-form select::-webkit-input-placeholder,.c-form textarea::-webkit-input-placeholder,.c-form input[type="text"]::-webkit-input-placeholder,.c-form input[type="password"]::-webkit-input-placeholder,.c-form input[type="datetime"]::-webkit-input-placeholder,.c-form input[type="datetime-local"]::-webkit-input-placeholder,.c-form input[type="date"]::-webkit-input-placeholder,.c-form input[type="month"]::-webkit-input-placeholder,.c-form input[type="time"]::-webkit-input-placeholder,.c-form input[type="week"]::-webkit-input-placeholder,.c-form input[type="number"]::-webkit-input-placeholder,.c-form input[type="email"]::-webkit-input-placeholder,.c-form input[type="url"]::-webkit-input-placeholder,.c-form input[type="search"]::-webkit-input-placeholder,.c-form input[type="tel"]::-webkit-input-placeholder,.c-form input[type="color"]::-webkit-input-placeholder,.c-form .uneditable-input::-webkit-input-placeholder {
+.g-form select:-moz-placeholder,.g-form textarea:-moz-placeholder,.g-form input[type="text"]:-moz-placeholder,.g-form input[type="password"]:-moz-placeholder,.g-form input[type="datetime"]:-moz-placeholder,.g-form input[type="datetime-local"]:-moz-placeholder,.g-form input[type="date"]:-moz-placeholder,.g-form input[type="month"]:-moz-placeholder,.g-form input[type="time"]:-moz-placeholder,.g-form input[type="week"]:-moz-placeholder,.g-form input[type="number"]:-moz-placeholder,.g-form input[type="email"]:-moz-placeholder,.g-form input[type="url"]:-moz-placeholder,.g-form input[type="search"]:-moz-placeholder,.g-form input[type="tel"]:-moz-placeholder,.g-form input[type="color"]:-moz-placeholder,.g-form .uneditable-input:-moz-placeholder,.g-form select:-ms-input-placeholder,.g-form textarea:-ms-input-placeholder,.g-form input[type="text"]:-ms-input-placeholder,.g-form input[type="password"]:-ms-input-placeholder,.g-form input[type="datetime"]:-ms-input-placeholder,.g-form input[type="datetime-local"]:-ms-input-placeholder,.g-form input[type="date"]:-ms-input-placeholder,.g-form input[type="month"]:-ms-input-placeholder,.g-form input[type="time"]:-ms-input-placeholder,.g-form input[type="week"]:-ms-input-placeholder,.g-form input[type="number"]:-ms-input-placeholder,.g-form input[type="email"]:-ms-input-placeholder,.g-form input[type="url"]:-ms-input-placeholder,.g-form input[type="search"]:-ms-input-placeholder,.g-form input[type="tel"]:-ms-input-placeholder,.g-form input[type="color"]:-ms-input-placeholder,.g-form .uneditable-input:-ms-input-placeholder,.g-form select::-webkit-input-placeholder,.g-form textarea::-webkit-input-placeholder,.g-form input[type="text"]::-webkit-input-placeholder,.g-form input[type="password"]::-webkit-input-placeholder,.g-form input[type="datetime"]::-webkit-input-placeholder,.g-form input[type="datetime-local"]::-webkit-input-placeholder,.g-form input[type="date"]::-webkit-input-placeholder,.g-form input[type="month"]::-webkit-input-placeholder,.g-form input[type="time"]::-webkit-input-placeholder,.g-form input[type="week"]::-webkit-input-placeholder,.g-form input[type="number"]::-webkit-input-placeholder,.g-form input[type="email"]::-webkit-input-placeholder,.g-form input[type="url"]::-webkit-input-placeholder,.g-form input[type="search"]::-webkit-input-placeholder,.g-form input[type="tel"]::-webkit-input-placeholder,.g-form input[type="color"]::-webkit-input-placeholder,.g-form .uneditable-input::-webkit-input-placeholder {
 	color: #91d37f;
 }
 
-.c-form input[type="checkbox"] {
+.g-form input[type="checkbox"] {
 	-webkit-appearance: none;
 	-ms-appearance: none;
 	-moz-appearance: none;
@@ -62,7 +62,7 @@ h1 {
 	position: relative;
 }
 
-.c-form input[type="checkbox"]:checked:after {
+.g-form input[type="checkbox"]:checked:after {
 	display: block;
 	content: '';
 	width: 15px;
@@ -80,7 +80,7 @@ h1 {
 	top: 0px;
 }
 
-.c-form button[type="button"],.c-form input[type="button"],.c-form button[type="reset"],.c-form input[type="reset"],.c-form button[type="submit"],.c-form input[type="submit"] {
+.g-form button[type="button"],.g-form input[type="button"],.g-form button[type="reset"],.g-form input[type="reset"],.g-form button[type="submit"],.g-form input[type="submit"] {
 	border: 0;
 	background: #fff;
 	color: #58c03c;
@@ -89,21 +89,21 @@ h1 {
 	min-width: 145px;
 }
 
-.c-form button[type="reset"],.c-form input[type="reset"] {
+.g-form button[type="reset"],.g-form input[type="reset"] {
 	background: url('../images/x.png') #ffffff 10px center no-repeat;
 	padding-left: 44px;
 	margin-right: 0;
 }
 
-.c-form button[type="submit"],.c-form input[type="submit"] {
+.g-form button[type="submit"],.g-form input[type="submit"] {
 	background: url('../images/send.png') #ffffff 10px center no-repeat;
 	padding-left: 44px;
 }
 
-.c-form button:hover,.c-form input:hover,.c-form button:focus,.c-form input:focus,.c-form button:active,.c-form input:active {
+.g-form button:hover,.g-form input:hover,.g-form button:focus,.g-form input:focus,.g-form button:active,.g-form input:active {
 	color: #234b18;
 }
 
-.c-form-controls {
+.g-form-controls {
 	margin: 3em 0 0;
 }
